--- a/Footer/index.html
+++ b/Footer/index.html
@@ -16,7 +16,7 @@
         <div class="content">
             <div class="top">
                 <div class="logo-details">
-                    <i class="fab fa-slack"></i>
+                    <i class="fab fa-gg"></i>
                     <span class="logo_name">GDSC</span>
                 </div>
 
@@ -71,7 +71,7 @@
 
         <div class="bottom-details">
             <div class="bottom_text">
-                <span class="copyright_text">Copyright &#169; 2022 <a href="#">GDSC </a>all right reversed</span>
+                <span class="copyright_text">Copyright &#169; 2022 <a href="#" style="margin-right:0">GDSC </a>all right reversed</span>
                 <span class="policy_terms">
                     <a href="#">Privacy Policy</a>
                     <a href="#">Terms of Service</a>
